change gs mistake and hamiltonian

--- a/compute_Aw_4hole.ipynb
+++ b/compute_Aw_4hole.ipynb
@@ -13,20 +13,20 @@
      "text": [
       "%pylab is deprecated, use %matplotlib inline and import the required libraries.\n",
       "Populating the interactive namespace from numpy and matplotlib\n",
-      "Ni_Cu_orbs =  ['d3z2r2', 'dx2y2']\n",
+      "Ni_Cu_orbs =  ['d3z2r2', 'dx2y2', 'dxy', 'dxz', 'dyz']\n",
       "H_orbs =  ['s']\n",
       "O1_orbs =  ['px']\n",
       "O2_orbs =  ['py']\n",
       "compute A(w) for symmetries =  ['1A1', '3B1', '3B1', '1A2', '3A2', '1E', '3E']\n",
       "Mc= 2\n",
-      "VS.dim =  5994\n",
-      "len(d_Ni_list) 594\n",
-      "len(d_Cu_list) 594\n",
-      "len(p_list) 1152\n",
-      "len(s_list) 36\n",
-      "len(idx_Ni) 594\n",
-      "len(idx_Cu) 594\n",
-      "basis 4.416184425354004 seconds ---\n",
+      "VS.dim =  26241\n",
+      "len(d_Ni_list) 6720\n",
+      "len(d_Cu_list) 6720\n",
+      "len(p_list) 2592\n",
+      "len(s_list) 81\n",
+      "len(idx_Ni) 6720\n",
+      "len(idx_Cu) 6720\n",
+      "basis 21.756616830825806 seconds ---\n",
       "===================================================\n",
       "ANi= 6.0 ACu= 6.0 epCu= 4.7 epNi= 4.7  tpd= 1.3  tpp= 0.5  Upp= 0  Uss= 0\n",
       "start create_tpd_nn_matrix\n",
@@ -42,90 +42,90 @@
       "start create_edep_diag_matrix\n",
       "=============================\n",
       "start create_interaction_matrix\n",
-      "--- create_interaction_matrix_ALL_syms 0.08976101875305176 seconds ---\n",
+      "--- create_interaction_matrix_ALL_syms 3.1715545654296875 seconds ---\n",
       "start create_interaction_matrix\n",
-      "--- create_interaction_matrix_ALL_syms 0.09078526496887207 seconds ---\n",
+      "--- create_interaction_matrix_ALL_syms 3.171025037765503 seconds ---\n",
       "start getting ground state\n",
       "lowest eigenvalue of H from np.linalg.eigsh = \n",
-      "[-2.22973907 -2.15760486 -1.85823683 -1.58853619 -1.58853619 -1.10623256\n",
-      " -0.98523411 -0.83347914 -0.81235985 -0.81235985]\n",
-      "-2.229739072245787\n",
+      "[-2.20927047 -2.14122016 -1.87465264 -1.60940904 -1.60940904 -1.11843605\n",
+      " -1.0477458  -0.86375417 -0.82902635 -0.82902635]\n",
+      "-2.209270472830692\n",
       "Degeneracy of ground state is  1\n",
-      "eigenvalue =  -2.229739072245787\n",
+      "eigenvalue =  -2.209270472830692\n",
       "Compute the weights in GS (lowest Aw peak)\n",
-      " state  5734   dx2y2 up 0 0 2   px dn 1 0 2   py dn 0 1 0   px up 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667864e-05 \n",
+      " state  9995   d3z2r2 up 0 0 2   dx2y2 up 0 0 2   d3z2r2 dn 0 0 0   dx2y2 dn 0 0 0 \n",
+      " S_Ni= 1 ,  Sz_Ni= 1 ,  S_Cu= 1 ,  Sz_Cu= -1 , weight =  0.0718577591178313 \n",
       "\n",
-      " state  4411   dx2y2 up 0 0 2   py dn 0 -1 2   py up 0 -1 0   px dn 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667864e-05 \n",
+      " state  9996   d3z2r2 up 0 0 2   dx2y2 dn 0 0 2   d3z2r2 up 0 0 0   dx2y2 dn 0 0 0 \n",
+      " S_Ni= 1 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= 0 , weight =  0.07185775911782966 \n",
       "\n",
-      " state  372   dx2y2 dn 0 0 2   px up -1 0 2   px dn -1 0 0   py up 0 -1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667864e-05 \n",
+      " state  9997   d3z2r2 dn 0 0 2   dx2y2 dn 0 0 2   d3z2r2 up 0 0 0   dx2y2 up 0 0 0 \n",
+      " S_Ni= 1 ,  Sz_Ni= -1 ,  S_Cu= 1 ,  Sz_Cu= 1 , weight =  0.07185775911782635 \n",
       "\n",
-      " state  5251   dx2y2 up 0 0 0   py dn 0 1 2   px up 1 0 2   px dn 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667854e-05 \n",
+      " state  10039   dx2y2 up 0 0 2   d3z2r2 dn 0 0 0   dx2y2 dn 0 0 0   s up 0 0 1 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= -1 , weight =  0.02211569009265853 \n",
       "\n",
-      " state  5503   dx2y2 up 0 0 2   py dn 0 -1 2   py dn 0 1 0   px up 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667854e-05 \n",
+      " state  10210   d3z2r2 up 0 0 2   dx2y2 up 0 0 2   dx2y2 dn 0 0 0   s dn 0 0 1 \n",
+      " S_Ni= 1 ,  Sz_Ni= 1 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.02211569009265849 \n",
       "\n",
-      " state  887   dx2y2 dn 0 0 0   px up -1 0 2   py dn 0 -1 2   px up -1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667854e-05 \n",
+      " state  10042   dx2y2 dn 0 0 2   d3z2r2 up 0 0 0   dx2y2 up 0 0 0   s dn 0 0 1 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= 1 , weight =  0.022115690092657004 \n",
       "\n",
-      " state  1280   dx2y2 up 0 0 0   px dn -1 0 2   py up 0 -1 2   py dn 0 -1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667854e-05 \n",
+      " state  10213   d3z2r2 dn 0 0 2   dx2y2 dn 0 0 2   dx2y2 up 0 0 0   s up 0 0 1 \n",
+      " S_Ni= 1 ,  Sz_Ni= -1 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.02211569009265698 \n",
       "\n",
-      " state  5100   dx2y2 up 0 0 0   px up -1 0 2   py dn 0 1 2   px dn 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667805e-05 \n",
+      " state  10272   dx2y2 up 0 0 2   dx2y2 dn 0 0 0   s up 0 0 1   s dn 0 0 1 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.014421810348259652 \n",
       "\n",
-      " state  4412   dx2y2 dn 0 0 2   py up 0 -1 2   py dn 0 -1 0   px up 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.06093472486678e-05 \n",
+      " state  10273   dx2y2 dn 0 0 2   dx2y2 up 0 0 0   s up 0 0 1   s dn 0 0 1 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.014421810348258856 \n",
       "\n",
-      " state  5437   dx2y2 up 0 0 2   px dn -1 0 2   py dn 0 1 0   px up 1 0 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.06093472486678e-05 \n",
+      " state  10040   dx2y2 up 0 0 2   d3z2r2 up 0 0 0   dx2y2 dn 0 0 0   s dn 0 0 1 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= 0 , weight =  0.011057845046329179 \n",
       "\n",
-      " state  2887   dx2y2 up 0 0 2   py dn 0 1 2   px dn -1 0 0   py up 0 1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667796e-05 \n",
+      " state  10211   d3z2r2 up 0 0 2   dx2y2 dn 0 0 2   dx2y2 dn 0 0 0   s up 0 0 1 \n",
+      " S_Ni= 1 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.011057845046329071 \n",
       "\n",
-      " state  2803   dx2y2 dn 0 0 2   px up -1 0 2   px dn -1 0 0   py up 0 1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667791e-05 \n",
+      " state  10212   d3z2r2 up 0 0 2   dx2y2 dn 0 0 2   dx2y2 up 0 0 0   s dn 0 0 1 \n",
+      " S_Ni= 1 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  0.011057845046328946 \n",
       "\n",
-      " state  373   dx2y2 up 0 0 2   px dn -1 0 2   px dn -1 0 0   py up 0 -1 0 \n",
-      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 0 ,  Sz_Cu= 0 , weight =  1.0609347248667791e-05 \n",
+      " state  10041   dx2y2 dn 0 0 2   d3z2r2 up 0 0 0   dx2y2 dn 0 0 0   s up 0 0 1 \n",
+      " S_Ni= 0 ,  Sz_Ni= 0 ,  S_Cu= 1 ,  Sz_Cu= 0 , weight =  0.011057845046328839 \n",
       "\n",
-      "sumweight= 1.0000000000000284\n",
-      "sumweight1= 0.37545267523850173\n",
-      "211= 0.006534435196203858\n",
-      "ddss= 0.029134168795170216\n",
-      "ddsp= 0.1407212014917119\n",
-      "dssp= 0.019358637735294646\n",
-      "dspp= 0.04137869395994835\n",
-      "ddds= 0.1357147900269992\n",
-      "sumweight2= 0.627158072794673\n",
-      "sumweight_picture= 0.6271580727946723\n",
-      "LmLn= 0.0009142460400232269\n",
-      "d9Ld10L2= 0.0073639500819362574\n",
-      "d9d10L3= 0.00040621342239497614\n",
-      "d10L3d9= 0.00040621342239497647\n",
-      "d9L2d10L= 0.0012179712979345624\n",
-      "d10Ld9L2= 0.0012179712979345616\n",
-      "d10d9L3= 7.715258165422656e-34\n",
-      "d10L2d9L= 0.0073639500819362505\n",
-      "d8Ld10L= 0.0019058880655216165\n",
-      "d10Ld8L= 0.0019058880655216162\n",
-      "d8d10L2= 0.011587416799692945\n",
-      "d10d8L2= 5.205464464027216e-34\n",
-      "d8L2d10= 1.5049626409750405e-33\n",
-      "d10L2d8= 0.011587416799692942\n",
-      "d9L2d9= 0.0043270547204444605\n",
-      "d9d9L2= 0.0043270547204444605\n",
-      "d9Ld9L= 0.08205274119301853\n",
-      "d9d8L= 0.006842301224169634\n",
-      "d8d9L= 0.13163749406432954\n",
-      "d9Ld8= 0.13163749406432945\n",
-      "d8Ld9= 0.006842301224169639\n",
-      "d8d8= 0.21361450620878294\n",
-      "--- get_ground_state 0.3316071033477783 seconds ---\n",
-      "--- 9.088180780410767 seconds ---\n"
+      "sumweight= 1.000000000000002\n",
+      "sumweight1= 3.7275495774783848e-06\n",
+      "211= 0.0064368490725817545\n",
+      "ddss= 0.02884362069651851\n",
+      "ddsp= 0.13919367578841557\n",
+      "dssp= 0.01909973177067607\n",
+      "dspp= 0.04083569956392887\n",
+      "ddds= 0.13479914706686033\n",
+      "sumweight2= 0.6307896120037871\n",
+      "sumweight_picture= 0.6307577924044537\n",
+      "LmLn= 0.0009074627864157426\n",
+      "d9Ld10L2= 0.007387177620904976\n",
+      "d9d10L3= 0.000392561200669837\n",
+      "d10L3d9= 0.00039256120066983707\n",
+      "d9L2d10L= 0.0011510061393888557\n",
+      "d10Ld9L2= 0.0011510061393888553\n",
+      "d10d9L3= 5.728721147093296e-34\n",
+      "d10L2d9L= 0.007387177620904974\n",
+      "d8Ld10L= 0.00176875728676299\n",
+      "d10Ld8L= 0.0017687572867629872\n",
+      "d8d10L2= 0.011636341438260407\n",
+      "d10d8L2= 5.906842280953914e-34\n",
+      "d8L2d10= 9.623567636948561e-34\n",
+      "d10L2d8= 0.011636341438260417\n",
+      "d9L2d9= 0.004111338815015235\n",
+      "d9d9L2= 0.004111338815015237\n",
+      "d9Ld9L= 0.08256723618786638\n",
+      "d9d8L= 0.006408482976509425\n",
+      "d8d9L= 0.13275584960539116\n",
+      "d9Ld8= 0.1327558496053911\n",
+      "d8Ld9= 0.006408482976509426\n",
+      "d8d8= 0.21606339133883481\n",
+      "--- get_ground_state 0.9624533653259277 seconds ---\n",
+      "--- 43.180402517318726 seconds ---\n"
      ]
     }
    ],
@@ -148,7 +148,8 @@
     "import parameters as pam\n",
     "import lattice as lat\n",
     "import variational_space as vs\n",
-    "import hamiltonian as ham\n",
+    "# import hamiltonian as ham\n",
+    "import hamiltonian_d10_U_2 as ham\n",
     "import basis_change as basis\n",
     "import get_state as getstate\n",
     "import utility as util\n",
@@ -190,10 +191,10 @@
     "        tpd_nn_hop_dir, tpd_orbs, tpd_nn_hop_fac, tpp_nn_hop_fac \\\n",
     "                                   = ham.set_tpd_tpp(Norb,0,0,pds,pdp,pps,ppp)\n",
     "        \n",
-    "    if Norb==5:  \n",
-    "        tds_nn_hop_dir, tds_orbs, tds_nn_hop_fac, tps_nn_hop_dir, tps_orbs, tps_nn_hop_fac \\\n",
-    "                                   = ham.set_tds_tps(Norb,tds,tps)\n",
-    "    \n",
+    "\n",
+    "    tds_nn_hop_dir, tds_orbs, tds_nn_hop_fac, tps_nn_hop_dir, tps_orbs, tps_nn_hop_fac \\\n",
+    "                               = ham.set_tds_tps(Norb,tds,tps)\n",
+    "\n",
     "#     tz_fac = ham.set_tz(Norb,if_tz_exist,tz)\n",
     "    \n",
     "    tz_fac = ham.set_tz(Norb,if_tz_exist,tza1,tzb1)\n",
